src/app.css
/* ... */
/* FILTER BAR */

.filter-bar {
  padding: 8px 16px;
  background-color: var(--bg-faded-color);
  display: flex;
  gap: 8px;
  overflow-x: auto;
  mask-image: linear-gradient(
    to right,
    transparent,
    black 16px,
    black calc(100% - 16px),
    transparent
  );
  align-items: center;
  transition: opacity 0.3s ease-out;

  &.loading,
  .loading > & {
    pointer-events: none;
    opacity: 0.5;
  }

  .filter-field {
    flex-shrink: 0;
    padding: 8px 16px;
    border-radius: 999px;
    color: var(--text-color);
    background-color: var(--bg-color);
    background-image: none;
    border: 2px solid transparent;
    margin: 0;
    /* appearance: none; */
    line-height: 1;
    font-size: 90%;
    display: flex;
    gap: 8px;

    > .icon {
      color: var(--link-color);
    }

    &:placeholder-shown {
      color: var(--text-insignificant-color);
    }

    &:is(:hover, :focus-visible) {
      border-color: var(--link-light-color);
    }
    &:focus {
      outline-color: var(--link-light-color);
    }
    &.is-active {
      border-color: var(--link-color);
      box-shadow: inset 0 0 8px var(--link-faded-color);
    }

    :is(input, select) {
      background-color: transparent;
      background-image: none;
      border: 0;
      padding: 0;
      margin: 0;
      color: inherit;
      font-size: inherit;
      line-height: inherit;
      appearance: none;
      border-radius: 0;
      box-shadow: none;
      outline: none;

      &::-webkit-calendar-picker-indicator {
        /* replace icon with triangle */
        opacity: 0.5;
        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="none"><path d="M4 6L8 10L12 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
      }
    }

    input[type='month'] {
      min-width: 6em;
    }
  }
}
.filter-bar.centered {
  justify-content: center;
}
@media (min-width: 40em) {
  .filter-bar {
    background-color: transparent;
  }
}
.filter-bar > a:not(.filter-clear) {
  padding: 8px 16px;
  border-radius: 999px;
  background-color: var(--bg-color);
  color: var(--link-color);
  text-decoration: none;
  white-space: nowrap;
  border: 2px solid transparent;
  transition: border-color 0.3s ease-out;
  display: inline-flex;
  align-items: center;
  gap: 8px;
}
.filter-bar > a:focus-visible {
  border-color: var(--link-light-color);
}
@media (hover: hover) {
  .filter-bar > a:hover {
    border-color: var(--link-light-color);
  }
}
.filter-bar > a > * {
  vertical-align: middle;
}
.filter-bar > a.is-active {
  border-color: var(--link-color);
  box-shadow: inset 0 0 8px var(--link-faded-color);
}
.filter-bar > a > .filter-count {
  font-size: 80%;
  display: inline-block;
  color: var(--text-insignificant-color);
  min-width: 16px;
  min-height: 16px;
  padding: 4px;
  margin: -4px -8px -4px 0;
  background-color: var(--bg-faded-color);
  border-radius: 999px;
}

/* NOTIFICATION PEEK */

.notification-peek .notification {
  padding-inline: 0 !important;
}
/* ... */

